--- a/Deep Learning/Data-Assimilation/dataass-other-calibration.ipynb
+++ b/Deep Learning/Data-Assimilation/dataass-other-calibration.ipynb
@@ -357,6 +357,12 @@
   }
  ],
  "metadata": {
+  "environment": {
+   "kernel": "python3",
+   "name": "tf2-gpu.2-6.m86",
+   "type": "gcloud",
+   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-6:m86"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -372,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
