--- a/Mathematics/Mathbook.ipynb
+++ b/Mathematics/Mathbook.ipynb
@@ -56,6 +56,35 @@
    "source": [
     "assert np.log2(10) - np.log10(10)/np.log10(2) < 0.001"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13ec6491-f59d-44ed-ad8f-ef4b1b2ae5eb",
+   "metadata": {},
+   "source": [
+    "$log \\frac{p(x}{q(x)}  \\Leftrightarrow　p(x) - q(x)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3ca4cf96-92a6-4cb7-b77e-d991af1abb70",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.log(2/4) == np.log(2) - np.log(4)"
+   ]
   }
  ],
  "metadata": {
