--- a/Probability and Statistics/Information Theory/Entropy.ipynb
+++ b/Probability and Statistics/Information Theory/Entropy.ipynb
@@ -285,6 +285,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "967b6ed9-2aa8-44d9-8eee-f0fd43cb645f",
+   "metadata": {},
+   "source": [
+    "Mutual Information"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4afdca92-1f04-4f11-87ea-641c2b571261",
+   "metadata": {},
+   "source": [
+    "$I(A;B) = H(B) - \\sum_{a}p(A = a)H(B|A = a)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94f391e7-7214-442b-9a40-ad6bf54f6a71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mutual_information():\n",
+    "    return "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3c05b16f-baed-4169-b1c4-f34e4cdffc5f",
    "metadata": {},
    "source": [
@@ -444,12 +471,6 @@
     "sns.distplot(sampleA, ax=axes[0])\n",
     "sns.distplot(sampleB, ax=axes[1], color=\"green\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "40ef3315-fcec-4a8a-b290-44ffa4190086",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
