--- a/Probability and Statistics/Information Theory/Entropy.ipynb
+++ b/Probability and Statistics/Information Theory/Entropy.ipynb
@@ -484,6 +484,48 @@
     "\n",
     "kl_divergence(shannon_entropy(pdfA), cross_entropy(pdfA, pdfB))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce805609-f79e-46bd-ad38-b20a7ee4e8dc",
+   "metadata": {},
+   "source": [
+    "Gini impurity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a948f1b-d97e-4a91-9018-df690895ca61",
+   "metadata": {},
+   "source": [
+    "tells us what is the probability of misclassifying an observation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d91ef63-8362-4163-8229-a67cc99ff5e8",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "${\\displaystyle \\operatorname {I} _{G}(p)=\\sum _{i=1}^{J}\\left(p_{i}\\sum _{k\\neq i}p_{k}\\right)=\\sum _{i=1}^{J}p_{i}(1-p_{i})=\\sum _{i=1}^{J}(p_{i}-p_{i}^{2})=\\sum _{i=1}^{J}p_{i}-\\sum _{i=1}^{J}p_{i}^{2}=1-\\sum _{i=1}^{J}p_{i}^{2}}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8f8ed73-9c28-49be-a141-d9ac7c7bb359",
+   "metadata": {},
+   "source": [
+    "$p_1(1-p_1) + p_2 (1 - p_2)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12842e32-4046-4fd1-9ad0-a6343965ac9e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -494,7 +536,7 @@
    "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-6:m86"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -508,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
