--- a/Deep Learning/neural structured learning.ipynb
+++ b/Deep Learning/neural structured learning.ipynb
@@ -133,8 +133,7 @@
     "    tf.keras.Input((28, 28), name='feature'),\n",
     "    tf.keras.layers.Flatten(),\n",
     "    tf.keras.layers.Dense(128, activation=tf.nn.relu),\n",
-    "    tf.keras.layers.Dense(10, activation=tf.nn.softmax)\n",
-    "])"
+    "    tf.keras.layers.Dense(10, activation=tf.nn.softmax)])"
    ]
   },
   {
@@ -5400,9 +5399,9 @@
  "metadata": {
   "environment": {
    "kernel": "python3",
-   "name": "tf2-gpu.2-6.m86",
+   "name": "tf2-gpu.2-6.m84",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-6:m86"
+   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-6:m84"
   },
   "kernelspec": {
    "display_name": "Python 3",
