--- a/Probability and Statistics/Tour_of_TensorFlow_Probability.ipynb
+++ b/Probability and Statistics/Tour_of_TensorFlow_Probability.ipynb
@@ -1018,7 +1018,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "Hh53LM89PQei"
+    "id": "Hh53LM89PQei",
+    "tags": []
    },
    "source": [
     "### A matrix-variate `Distribution`"
@@ -1045,6 +1046,7 @@
     }
    ],
    "source": [
+    "# Lewandowski-Kurowicka-Joe distribution\n",
     "lkj = tfd.LKJ(dimension=10, concentration=[1.5, 3.0])\n",
     "print(\"Batch shape: \", lkj.batch_shape)\n",
     "print(\"Event shape: \", lkj.event_shape)"
@@ -1242,7 +1244,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "W6GCupiD5r5C"
+    "id": "W6GCupiD5r5C",
+    "tags": []
    },
    "source": [
     "## Bijectors\n",
@@ -1262,6 +1265,8 @@
     "* $g$ is a smooth, invertible function on the space of $X$'s\n",
     "* $Y = g(X)$ is a new, transformed random variable\n",
     "* $p(Y=y) = p(X=g^{-1}(y)) \\cdot |\\nabla g^{-1}(y)|$\n",
+    "\n",
+    "the continuously differentiable function f is invertible near a point p ∈ Rn if the Jacobian determinant at p is non-zero\n",
     "\n",
     "### Caching\n",
     "Bijectors also cache the forward and inverse computations, and log-det-Jacobians, which allows us to save\n",
