--- a/Tensorflow/Eager&Graph_function.ipynb
+++ b/Tensorflow/Eager&Graph_function.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "80e17338",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "4cbbb00f",
    "metadata": {},
    "outputs": [
     {
@@ -43,6 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "4d7c4e52",
    "metadata": {},
    "outputs": [
     {
@@ -75,6 +78,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "26172b7e",
    "metadata": {},
    "source": [
     "Not much difference for the small computation"
@@ -83,6 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "3dc4b273",
    "metadata": {},
    "outputs": [
     {
@@ -103,6 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "09f71622",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,6 +127,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a6c232fc",
    "metadata": {},
    "source": [
     "Huge difference for more computationally heave one"
@@ -129,6 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "b67dfbe3",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +158,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -164,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
