--- a/Tensorflow/Graph.ipynb
+++ b/Tensorflow/Graph.ipynb
@@ -425,7 +425,7 @@
    "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-6:m84"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -439,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
