--- a/Tensorflow/Practice2.ipynb
+++ b/Tensorflow/Practice2.ipynb
@@ -415,7 +415,9 @@
   {
    "cell_type": "markdown",
    "id": "blond-fashion",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### GPU accelaration\n",
     "\n",
