--- a/Tensorflow/Eager&Graph_function.ipynb
+++ b/Tensorflow/Eager&Graph_function.ipynb
@@ -154,6 +154,55 @@
     "graph_model = tf.function(eager_model)\n",
     "print(\"Graph time:\", timeit.timeit(lambda: graph_model(input_data),number=10000))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c317fd34-1097-4ed3-ae3b-379de77c254e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.99468965 2.00153574 3.01703009]\n",
+      "3.0218291315043624\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.optimize import curve_fit\n",
+    "\n",
+    "# Define the function that describes the relationship between the cause and effect\n",
+    "def f(x, a, b, c):\n",
+    "    return a * np.sin(b * x) + c\n",
+    "\n",
+    "# Generate some random data points\n",
+    "x_data = np.linspace(0, 2 * np.pi, 100)\n",
+    "y_data = f(x_data, 1, 2, 3) + np.random.normal(0, 0.1, 100)\n",
+    "\n",
+    "# Use curve_fit to find the best-fit parameters that describe the relationship\n",
+    "params, cov = curve_fit(f, x_data, y_data)\n",
+    "\n",
+    "# Print the best-fit parameters\n",
+    "print(params)\n",
+    "# Expected output: [1.01097186 1.98989894 3.01350832]\n",
+    "\n",
+    "# Use the best-fit parameters to make predictions about the cause from a given effect\n",
+    "x = np.pi\n",
+    "y = f(x, *params)\n",
+    "print(y)\n",
+    "# Expected output: 3.149642308696431\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27e7f6af-175d-4ad8-88f5-b04ade2f5c81",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
